# vscode-opengl-test

./: CMakeLists.txt  README.md
include/glad/: glad.h
include/shader/: shader.hpp
resources/shaders/: triangle.fs  triangle.vs
src/: glad.c  main.cpp
src/shader/: shader.cpp
