cmake_minimum_required(VERSION 3.13)

# 기본 변수 설정
set(PROJECT_NAME vscode_opengl_test)
set(CMAKE_CXX_STANDARD 17)

# 매크로 변수 설정
set(WINDOW_NAME "Hello, OpenGL!")
set(WINDOW_WIDTH 800)
set(WINDOW_HEIGHT 600)

# FetchContent 모듈 포함
include(FetchContent)

# spdlog
FetchContent_Declare(
  spdlog
  GIT_REPOSITORY https://github.com/gabime/spdlog.git
  GIT_TAG v1.x
)
FetchContent_MakeAvailable(spdlog)

# glfw
FetchContent_Declare(
  glfw
  GIT_REPOSITORY https://github.com/glfw/glfw.git
  GIT_TAG 3.3.2
)
FetchContent_MakeAvailable(glfw)

# 실행 파일 정의
add_executable(${PROJECT_NAME} src/main.cpp)

# 타겟에 라이브러리 링크
target_link_libraries(${PROJECT_NAME} PRIVATE glfw spdlog)

# 타겟에 매크로 컴파일 정의
target_compile_definitions(${PROJECT_NAME} PRIVATE
  WINDOW_NAME="${WINDOW_NAME}"
  WINDOW_WIDTH=${WINDOW_WIDTH}
  WINDOW_HEIGHT=${WINDOW_HEIGHT}
)
